--- a/app/views/home/display.html.erb
+++ b/app/views/home/display.html.erb
@@ -6,7 +6,7 @@
 				<%= image_tag "logo.png" %>
 			</div>
 			<div id="navigation">
-				<div class="navigationLink">Juan Sebastian Angarita</div>
+				<div class="navigationLink">Sebastian</div>
 			</div>
 		</div>
 		<div id="slogan">AN ENGINEERING STATE OF MIND.</div>
